# distributed_systems_labs

./: Cargo.toml  README.md
key-value-server/: Cargo.toml  README.md
key-value-server/core/: Cargo.toml  build.rs  config.json
key-value-server/core/proto/: key-value-server.proto
key-value-server/core/src/: client_config.rs  grpc_client.rs  key_value_server.rs  lib.rs  packet_loss_wrapper.rs  server_runner.rs  storage.rs  storage_error.rs
key-value-server/grpc-client/: Cargo.toml
key-value-server/grpc-client/src/: grpc_client.rs  main.rs
key-value-server/server-flat-file/: README.md
key-value-server/server-flat-file/src/: main.rs
key-value-server/server-in-memory/: .gitignore  Cargo.toml  build.rs
key-value-server/server-in-memory/scripts/: run_test.ps1
key-value-server/server-in-memory/src/: in_memory_storage.rs  key_value_service.rs  main.rs
key-value-server/server-sled-db/: README.md
key-value-server/server-sled-db/src/: main.rs
map-reduce/: Cargo.toml  README.md  config.json
map-reduce/core/: Cargo.toml  README.md
map-reduce/core/src/: completion_signaling.rs  config.rs  default_phase_executor.rs  executor.rs  in_memory_state_store.rs  lib.rs  local_state_access.rs  map_reduce_job.rs  mapper.rs  phase_executor.rs  reducer.rs  shutdown_signal.rs  state_access.rs  state_store.rs  status_sender.rs  utils.rs  work_channel.rs  work_receiver.rs  work_sender.rs  worker.rs  worker_factory.rs  worker_io.rs  worker_message.rs  worker_pool_factory.rs  worker_runtime.rs  worker_synchronization.rs
map-reduce/process-rpc/: Cargo.toml  README.md  build.rs  config.json
map-reduce/process-rpc/proto/: mapreduce.proto
map-reduce/process-rpc/scripts/: run_proto_rpc.ps1
map-reduce/process-rpc/src/: config.rs  grpc_completion_signaling.rs  grpc_shutdown_signal.rs  grpc_state_access.rs  grpc_state_server.rs  grpc_state_store.rs  grpc_status_sender.rs  grpc_work_channel.rs  grpc_work_receiver.rs  grpc_work_sender.rs  grpc_worker_runtime.rs  grpc_worker_synchonization.rs  grpc_worker_synchronization.rs  main.rs  mapper.rs  reducer.rs  rpc.rs
map-reduce/scripts/: stress_test.ps1
map-reduce/src/: channel_completion_signaling.rs  completion_signaling.rs  config.rs  main.rs  map_reduce_logic.rs  mapper.rs  orchestrator.rs  reducer.rs  state_access.rs  task_work_distributor.rs  work_channel.rs  work_distributor.rs  worker.rs  worker_runtime.rs
map-reduce/task-channels/: Cargo.toml  README.md  config.json
map-reduce/task-channels/src/: channel_completion_signaling.rs  channel_shutdown_signal.rs  channel_status_sender.rs  channel_work_receiver.rs  channel_work_sender.rs  channel_worker_runtime.rs  channel_worker_synchronization.rs  channel_wrappers.rs  config.rs  main.rs  mapper.rs  mpsc_work_channel.rs  reducer.rs  task_mapper_factory.rs  task_reducer_factory.rs  task_work_distributor.rs  tokio_runtime.rs  types.rs
map-reduce/thread-socket/: Cargo.toml  README.md  config.json
map-reduce/thread-socket/src/: config.rs  local_state_access.rs  main.rs  mapper.rs  reducer.rs  socket_completion_signaling.rs  socket_mapper_factory.rs  socket_reducer_factory.rs  socket_shutdown_signal.rs  socket_status_sender.rs  socket_work_channel.rs  socket_work_distributor.rs  socket_work_receiver.rs  socket_work_sender.rs  socket_worker_runtime.rs  socket_worker_synchonization.rs  socket_worker_synchronization.rs  thread_runtime.rs
map-reduce/word-search/: Cargo.toml
map-reduce/word-search/src/: lib.rs
raft/: Cargo.toml  README.md
raft/core/: Cargo.toml  README.md
raft/core/src/: config_change_manager.rs  election_manager.rs  event.rs  lib.rs  log_entry.rs  log_entry_collection.rs  log_replication_manager.rs  map_collection.rs  message_handler.rs  node_collection.rs  observer.rs  raft_messages.rs  raft_node.rs  raft_node_builder.rs  snapshot.rs  state_machine.rs  storage.rs  timer.rs  transport.rs  types.rs
raft/embassy-sim/: Cargo.toml  README.md
raft/embassy-sim/src/: cancellation_token.rs  cluster.rs  embassy_log_collection.rs  embassy_map_collection.rs  embassy_node.rs  embassy_node_collection.rs  embassy_observer.rs  embassy_state_machine.rs  embassy_storage.rs  embassy_timer.rs  heap.rs  heapless_chunk_collection.rs  led_state.rs  lib.rs  main.rs  net_config.rs  net_driver.rs  time_driver.rs
raft/embassy-sim/src/transport/: async_transport.rs  channel.rs  embassy_transport.rs  mod.rs  net_driver.rs  raft_msg_serde.rs  setup.rs  udp.rs
raft/embassy-sim/src/transport/channel/: setup.rs  transport.rs
raft/embassy-sim/src/transport/udp/: config.rs  mod.rs  serde.rs  serde_raft_message.rs  setup.rs  transport.rs
raft/sim/: Cargo.toml
raft/sim/src/: in_memory_chunk_collection.rs  in_memory_log_entry_collection.rs  in_memory_map_collection.rs  in_memory_node_collection.rs  in_memory_state_machine.rs  in_memory_storage.rs  in_memory_transport.rs  lib.rs  message_broker.rs  mocked_timer_service.rs  null_observer.rs  raft_cluster.rs  snapshot_types.rs  test_cluster.rs  timefull_test_cluster.rs  timeless_test_cluster.rs  vec_node_collection.rs
raft/sim/tests/: algo_tests.rs  already_voted_election_tests.rs  append_entry_idempotency.rs  apply_state_machine_tests.rs  basic_leader_election_tests.rs  cannot_commit_old_entries.rs  client_payload_replication_tests.rs  commit_index_advancement_tests.rs  config_api_tests.rs  config_change_manager_tests.rs  conflict_resolution_tests.rs  election_manager_tests.rs  election_with_log_restriction.rs  follower_far_behind.rs  heartbeat_election_tests.rs  leader_steps_down.rs  leader_steps_down_election_tests.rs  log_replication_manager_tests.rs  message_handler_tests.rs  network_partition.rs  pre_vote_tests.rs  rapid_sequential_command.rs  snapshot_infrastructure_tests.rs  snapshot_manager_tests.rs  split_leader_election_tests.rs  term_vs_log_length_election_tests.rs  timed_election_tests.rs
