[workspace]
resolver = "2"
members = [
    "map-reduce/core",
    "map-reduce/word-search",
    "map-reduce/task-channels",
    "map-reduce/thread-socket",
    "map-reduce/process-rpc",
    "key-value-server/core",
    "key-value-server/server-in-memory",
    "key-value-server/server-flat-file",
    "key-value-server/server-sled-db",
    "raft/core",
    "raft/sim",
]

[workspace.dependencies]
async-trait = "0.1.89"
fastrand = "2.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
sled = "0.34"
bincode = "1.3.3"

map-reduce-core = { path = "map-reduce/core" }
map-reduce-word-search = { path = "map-reduce/word-search" }
