[workspace]
resolver = "2"
members = [
    "core",
    "word-search",
    "task-channels",
    "thread-socket",
]

[workspace.dependencies]
async-trait = "0.1.89"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-stream = "0.1.17"
ctrlc = "3.4"

map-reduce-core = { path = "core" }
map-reduce-word-search = { path = "word-search" }

