[package]
name = "key-value-server-grpc-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-value-server-grpc-client"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
socket2 = "0.6.1"

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
