[package]
name = "key-value-server-grpc-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-value-server-grpc-client"
path = "src/main.rs"

[dependencies]
key-value-server-core = { path = "../core" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-util = { workspace = true }
fastrand = "2.3"
