[package]
name = "key-value-server-in-memory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-value-server-in-memory"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
socket2 = "0.6.1"

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
