[package]
name = "key-value-server-in-memory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-value-server-in-memory"
path = "src/main.rs"

[dependencies]
key-value-server-core = { path = "../core" }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
