[package]
name = "map-reduce-process-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map-reduce-process-rpc"
path = "src/main.rs"

[dependencies]
map-reduce-core = { workspace = true }
map-reduce-word-search = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
socket2 = "0.6.1"

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
