[package]
name = "map-reduce-task-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
map-reduce-core = { workspace = true }
map-reduce-word-search = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
