[package]
name = "map-reduce-thread-socket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map-reduce-thread-socket"
path = "src/main.rs"

[dependencies]
map-reduce-core = { path = "../core" }
map-reduce-word-search = { path = "../word-search" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
ctrlc = "3.4"
