[package]
name = "map-reduce-thread-socket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map-reduce-thread-socket"
path = "src/main.rs"

[dependencies]
map-reduce-core = { workspace = true }
map-reduce-word-search = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
async-trait = { workspace = true }
